Fix width(text overflow) issue on selections.

--- a/css/style.css
+++ b/css/style.css
@@ -2391,6 +2391,12 @@ h6 {
     .checkout-form__multi-line .checkout-form__line {
       flex: 1 1;
       margin: 0 0 0 15px; }
+      .checkout-form__multi-line .checkout-form__line.city {
+        width: calc(70% - 15px);
+        flex: none; }
+      .checkout-form__multi-line .checkout-form__line.zipcode {
+        width: 30%;
+        flex: none; }
       .checkout-form__multi-line .checkout-form__line:first-child {
         margin: 0; }
   .checkout-form__line {
@@ -2447,7 +2453,10 @@ h6 {
     .checkout-form__multi-line {
       flex-direction: column; }
       .checkout-form__multi-line .checkout-form__line {
-        margin: 15px 0 0; } }
+        margin: 15px 0 0; }
+        .checkout-form__multi-line .checkout-form__line.zipcode {
+          width: 30%;
+          flex: none; } }
   @media only screen and (max-width: 560px) {
     .checkout-form__cols {
       flex-direction: column; }
@@ -2466,7 +2475,11 @@ h6 {
     border: 1px solid #d5d5d5;
     background: #fff;
     box-shadow: none;
-    padding: 26px 18px 10px;
+    padding: 26px 27px 10px 18px;
+    white-space: nowrap;
+    overflow: hidden;
+    word-wrap: break-word;
+    text-overflow: ellipsis;
     white-space: nowrap; }
   .basic-select.single .selectize-dropdown {
     z-index: 11;
