--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -191,6 +191,16 @@
 		.checkout-form__line{
 			flex: 1 1;
 			margin: 0 0 0 15px;
+			
+			&.city {
+				width: calc(70% - 15px);
+				flex: none;
+			}
+
+			&.zipcode {
+				width: 30%;
+				flex: none;
+			}
 
 			&:first-child{
 				margin: 0;
@@ -274,6 +284,10 @@
 
 			.checkout-form__line{
 				margin: 15px 0 0;
+				&.zipcode {
+					width: 30%;
+					flex: none;
+				}
 			}
 		}
 	}
@@ -304,7 +318,11 @@
 		border: 1px solid #d5d5d5;
 		background: #fff;
 		box-shadow: none;
-		padding: 26px 18px 10px;
+		padding: 26px 27px 10px 18px;
+		white-space: nowrap;
+		overflow: hidden;
+		word-wrap: break-word;
+		text-overflow: ellipsis;
 		white-space: nowrap;
 	}
 
